#40 make shift click more stable, fix resizing issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,13 +8,13 @@
   pointer-events: none;
 }
 
-#paperCanvas{
+#AnnotationCanvas{
   width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 1;
   pointer-events: none;
 }
 
